--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: node_js
-npm
+node_js:
+-lts/*
+deploy:
+      provider: heroku
+      api_key:
+        secure:
+     q55JSZ8jYAwFjaEQqnW1REhJYIddz5
+        app: mern-app-softeng
       
 
